--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +80,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTk2ODM5NCwianRpIjoiYmRmNWJkNWItMDVlMi00ZjZlLTliMGYtNGEzNTc0ZDJiMTZiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5OTY4Mzk0LCJleHAiOjE2NTk5NzE5OTR9.pA13f5UVllG5vpGHXE12QVeaSn7cSMjSLNrSKhKQEjY\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTk5MjAxOCwianRpIjoiZGY1OWUwMjMtNGYwYS00NThkLWFiNTMtNWY4NGU3NDcyYzA5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5OTkyMDE4LCJleHAiOjE2NTk5OTU2MTh9._q-ChBnBruR4GYZlJDqjyMt_d_zmRJEAZERN4aH21kI\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTk2ODM5NCwianRpIjoiYmRmNWJkNWItMDVlMi00ZjZlLTliMGYtNGEzNTc0ZDJiMTZiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5OTY4Mzk0LCJleHAiOjE2NTk5NzE5OTR9.pA13f5UVllG5vpGHXE12QVeaSn7cSMjSLNrSKhKQEjY'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTk5MjAxOCwianRpIjoiZGY1OWUwMjMtNGYwYS00NThkLWFiNTMtNWY4NGU3NDcyYzA5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5OTkyMDE4LCJleHAiOjE2NTk5OTU2MTh9._q-ChBnBruR4GYZlJDqjyMt_d_zmRJEAZERN4aH21kI'}\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -697,14 +697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'edges': [], 'nodes': [{'computedPosition': {'x': 100, 'y': 100, 'z': 0}, 'dimensions': {'height': 36, 'width': 150}, 'handleBounds': {'source': [{'height': 8, 'id': '1__handle-bottom', 'position': 'bottom', 'width': 8, 'x': 71, 'y': 31}], 'target': [{'height': 8, 'id': '1__handle-top', 'position': 'top', 'width': 8, 'x': 71, 'y': -3}]}, 'id': '1', 'label': 'Node 1', 'position': {'x': 100, 'y': 100}, 'type': 'default'}], 'position': [0, 0], 'zoom': 1}\n"
+      "{}\n"
      ]
     }
    ],
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -943,14 +943,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'rule_names': ['rule_1']}\n"
+      "{'rule_names': []}\n"
      ]
     }
    ],
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -981,14 +981,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'edges': [], 'nodes': [{'computedPosition': {'x': 133, 'y': 119, 'z': 0}, 'dimensions': {'height': 36, 'width': 150}, 'handleBounds': {'source': [{'height': 8, 'id': '1__handle-bottom', 'position': 'bottom', 'width': 8, 'x': 71, 'y': 31}], 'target': [{'height': 8, 'id': '1__handle-top', 'position': 'top', 'width': 8, 'x': 71, 'y': -3}]}, 'id': '1', 'label': 'Node 1', 'position': {'x': 133, 'y': 119}, 'selected': False, 'type': 'default'}], 'position': [-126.92906289092366, -87.27995323994386], 'zoom': 1.319507910772895}\n"
+      "{}\n"
      ]
     }
    ],
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -1181,12 +1181,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Tokenizer API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'tokens': [{'word': '台積', 'start': 0, 'end': 2}, {'word': '電在', 'start': 2, 'end': 4}, {'word': '美國', 'start': 4, 'end': 6}, {'word': '《', 'start': 6, 'end': 7}, {'word': '財富', 'start': 7, 'end': 9}, {'word': '》', 'start': 9, 'end': 10}, {'word': '雜誌', 'start': 10, 'end': 12}, {'word': '評選', 'start': 12, 'end': 14}, {'word': '「', 'start': 14, 'end': 15}, {'word': '全球', 'start': 15, 'end': 17}, {'word': '最大', 'start': 17, 'end': 19}, {'word': '500', 'start': 19, 'end': 22}, {'word': '家', 'start': 22, 'end': 23}, {'word': '公司', 'start': 23, 'end': 25}, {'word': '」', 'start': 25, 'end': 26}, {'word': '排行榜', 'start': 26, 'end': 29}, {'word': '中', 'start': 29, 'end': 30}, {'word': '，', 'start': 30, 'end': 31}, {'word': '依營', 'start': 31, 'end': 33}, {'word': '收規模', 'start': 33, 'end': 36}, {'word': '名列', 'start': 36, 'end': 38}, {'word': '全球', 'start': 38, 'end': 40}, {'word': '第', 'start': 40, 'end': 41}, {'word': '251', 'start': 41, 'end': 44}, {'word': '名', 'start': 44, 'end': 45}, {'word': '。', 'start': 45, 'end': 46}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"tokenize\"\"\"\n",
+    "r_post = requests.post(f'{BASE_URL}/projects/project_1/tokenizer', cookies=cookies, json={'sentence': '台積電在美國《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第251名。'})\n",
+    "print(r_post.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Finish test. Delete the project."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,6 +1279,63 @@
     "#         return v\n",
     "\n",
     "# print(type(ProjectSchema))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GeneralNameSchema(name=None, new_name=None)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from pydantic import BaseModel, Extra, validator\n",
+    "# from typing import Optional\n",
+    "# class GeneralNameSchema(BaseModel):\n",
+    "#     name: Optional[str]\n",
+    "#     new_name: Optional[str]\n",
+    "# GeneralNameSchema(name= None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jieba\n",
+    "tokenized = jieba.tokenize('測試測試')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tokens': [{'word': '測試', 'start': 0, 'end': 2},\n",
+       "  {'word': '測試', 'start': 2, 'end': 4}]}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens = {'tokens': [{'word': word, 'start': start, 'end': end} for (word, start, end) in tokenized]}\n",
+    "tokens\n"
    ]
   }
  ],
